src/objects/CreditMemoPart__c.object
<CustomObject>
    <description>The applied and unapplied portions of  the credit memo.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>The date when the invoice was created in the DAZN system.</description>
        <label>DAZN Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreditMemo__c</fullName>
        <label>Credit Memo</label>
        <referenceTo>CreditMemo__c</referenceTo>
        <relationshipLabel>Credit Memo Parts</relationshipLabel>
        <relationshipName>Credit_Memo_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DebitMemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Memo</label>
        <referenceTo>DebitMemo__c</referenceTo>
        <relationshipLabel>Credit Memo Parts</relationshipLabel>
        <relationshipName>Credit_Memo_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Credit Memo Parts</relationshipLabel>
        <relationshipName>Credit_Memo_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the DAZN system.</description>
        <label>DAZN Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>DAZN Credit Memo Part</label>
    <nameField>
        <label>Credit Memo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Credit Memo Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>